# serializer version: 1
# name: test_DAT_2_x4
  ImageModelDescriptor(
    architecture=DATArch(
      id='DAT',
      name='DAT',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64|8x32',
      '64nf',
      '180dim',
      '2.0ef',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_DAT_S_x3
  ImageModelDescriptor(
    architecture=DATArch(
      id='DAT',
      name='DAT',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64|8x16',
      '64nf',
      '180dim',
      '2.0ef',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_DAT_S_x4
  ImageModelDescriptor(
    architecture=DATArch(
      id='DAT',
      name='DAT',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64|8x16',
      '64nf',
      '180dim',
      '2.0ef',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_DAT_tags
  ImageModelDescriptor(
    architecture=DATArch(
      id='DAT',
      name='DAT',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'light',
      's64|8x32',
      '60nf',
      '60dim',
      '2.0ef',
      '3conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_DAT_tags.1
  ImageModelDescriptor(
    architecture=DATArch(
      id='DAT',
      name='DAT',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64|8x16',
      '64nf',
      '180dim',
      '2.0ef',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_DAT_tags.2
  ImageModelDescriptor(
    architecture=DATArch(
      id='DAT',
      name='DAT',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64|8x32',
      '64nf',
      '180dim',
      '4.0ef',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_DAT_tags.3
  ImageModelDescriptor(
    architecture=DATArch(
      id='DAT',
      name='DAT',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64|8x32',
      '64nf',
      '180dim',
      '2.0ef',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_DAT_x4
  ImageModelDescriptor(
    architecture=DATArch(
      id='DAT',
      name='DAT',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64|8x32',
      '64nf',
      '180dim',
      '4.0ef',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
